--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1"
+  },
+  "volta": {
+    "node": "22.11.0"
   }
 }
